se conectaron botones y se arreglo parte de compras

--- a/Paginas/perfil.html
+++ b/Paginas/perfil.html
@@ -49,22 +49,12 @@
               accedes a entrenamientos avanzados, áreas especializadas y asesoramiento para
               potenciar tu fuerza y resistencia. Aquí es donde el hierro se convierte en acero.
            </p>
-        <button class="btn-renovar">¡Renueva o actualiza tu plan!</button>
+        <a href="planesyservicios.html" class="btn btn-renovar">¡Renueva o actualiza tu plan!</a>
     </div>
-
-    <!--Boton Cerrar Sesión-->
-    <div class="cerrar-sesion">
-      <button class="btn-cerrar">Cerrar sesión</button>
-      </div>
-    </div>
+    
   </section>
-<<<<<<< HEAD
-  
-  
-=======
 
     <!--Footer-->
->>>>>>> 7a82c48c06c139e73993a1670c34303f096e941a
 <footer>
       <h2>SÍGUENOS</h2>
         <div>
