--- a/Paginas/compras.html
+++ b/Paginas/compras.html
@@ -39,7 +39,7 @@
     <!-- tipo plan 1 -->
     <div class="d-flex justify-content-between align-items-center bg-dark text-white rounded p-3 mb-3 producto">
       <div class="d-flex align-items-center">
-        <img src="../Img/Plan_AbyssEntry.webp" class="imagen-item">
+        <img src="../Img/Plan_AbyssEntry.webp" class="imagen-item img-fluid">
         <div>
           <h5 class="mb-1 nombreProducto">Plan: Abyss Entry</h5>
         </div>
@@ -54,7 +54,7 @@
       <div class="d-flex align-items-center">
         <img src="../Img/Proteina.webp" class="imagen-item">
         <div>
-          <h5 class="mb-1">Proteína</h5>
+          <h5 class="mb-1 nombreProducto">Proteína</h5>
           <div class="d-flex align-items-center gap-2">
           </div>
         </div>
@@ -69,7 +69,7 @@
       <div class="d-flex align-items-center">
         <img src="../Img/Creatinaxd.webp" class="imagen-item">
         <div>
-          <h5 class="mb-1">Creatina</h5>
+          <h5 class="mb-1 nombreProducto">Creatina</h5>
           <div class="d-flex align-items-center gap-2">
           </div>
         </div>
@@ -84,7 +84,7 @@
       <div class="d-flex align-items-center">
         <img src="../Img/pre-entreno.webp" class="imagen-item">
         <div>
-          <h5 class="mb-1">Pre-entreno</h5>
+          <h5 class="mb-1 nombreProducto">Pre-entreno</h5>
           <div class="d-flex align-items-center gap-2">
           </div>
         </div>
